src/objects/QI_Legal_Entity__c.object
<CustomObject>
    <description>Label updated by Vikram Singh under CR-11576</description>
    <fields>
        <fullName>Court_of_Jurisdiction__c</fullName>
        <description>created by Vikram Singh under CR-11576</description>
        <formula>Location_of_Governing_Law__r.Court_of_Jurisdiction__c</formula>
        <label>Court of Jurisdiction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IQVIA_Business_Area__c</fullName>
        <description>created by Vikram Singh under CR-11576</description>
        <label>IQVIA Business Area</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contract Sales &amp; Medical Solutions (CSMS) (Legacy IES)</fullName>
                </value>
                <value>
                    <fullName>Public Health</fullName>
                </value>
                <value>
                    <fullName>Q Squared</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Development Solutions (RDS) (Legacy Quintiles)</fullName>
                </value>
                <value>
                    <fullName>Strategic Sites (Master CDA used with strategic sites about potential trials IF the sponsor has accepted their usage)</fullName>
                </value>
                <value>
                    <fullName>Technology &amp; Analytics Solutions (TAS) (Legacy IMS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IQVIA_Legal_Entity_Address_Chinese__c</fullName>
        <label>IQVIA Legal Entity Address Chinese</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IQVIA_Legal_Entity_Lookup_Subtitle__c</fullName>
        <description>Legal Entity Name + IQVIA Legal Entity Address</description>
        <formula>&apos;Name: &apos; &amp; Name &amp; &apos; --- Address: &apos; &amp; QI_Legal_Entity_Address__c</formula>
        <label>IQVIA Legal Entity Lookup Subtitle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IQVIA_Legal_Entity_Name_Chinese__c</fullName>
        <label>IQVIA Legal Entity Name Chinese</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IQVIA_Legal_Entity_Search_Name__c</fullName>
        <description>This is the concatenation of country code and Legal entity name, used to optimize the lookup search</description>
        <label>IQVIA Legal Entity Search Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is created for the data migration process.</description>
        <externalId>true</externalId>
        <label>Legacy id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location_of_Governing_Law_Chinese__c</fullName>
        <formula>Location_of_Governing_Law__r.Location_of_Governing_Law_Chinese__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location of Governing Law Chinese</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Governing_Law__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>created by Vikram Singh under CR-11576</description>
        <label>Location of Governing Law</label>
        <referenceTo>CDA_Approved_Governing_Law_Location__c</referenceTo>
        <relationshipLabel>CDA Approved Legal Entities</relationshipLabel>
        <relationshipName>IQVIA_Legal_Entities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_for_Signature__c</fullName>
        <description>Legal entity name prints on CDA doc. Updated by Vikram Singh under CR-11576</description>
        <label>Authorized Signer Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QI_Legal_Entity_Address__c</fullName>
        <description>updated by Vikram Singh under CR-11576</description>
        <inlineHelpText>QI Legal Entity Address</inlineHelpText>
        <label>IQVIA Legal Entity Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Updated by Vikram Singh under CR-11576</description>
        <label>Authorized Signer Title</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_For_RDS_Q2_Broad__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate that this legal entity will be used in RDS and Q2 Business Areas of MyCDA when Project Indicator is &quot;No&quot;.</description>
        <inlineHelpText>Indicate that this legal entity will be used in RDS and Q2 Business Areas of MyCDA when Project Indicator is &quot;No&quot;.</inlineHelpText>
        <label>is For RDS Q2 Broad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Signatories_Not_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Signatories Not Available</label>
        <type>Checkbox</type>
    </fields>
    <label>CDA Approved Legal Entity</label>
    <nameField>
        <label>IQVIA Legal Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CDA Approved Legal Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Legal_Entity_Uniqueness_Validation</fullName>
        <active>false</active>
        <description>Created by Vikram Singh under CR-11576</description>
        <errorConditionFormula>Name = VLOOKUP($ObjectType.QI_Legal_Entity__c.Fields.Name, $ObjectType.QI_Legal_Entity__c.Fields.Name, Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Record already exists with this name.</errorMessage>
    </validationRules>
</CustomObject>